@@ -1,5 +1,0 @@
-package com.nhl.link.etl.metadata;
-
-public enum RelationshipType {
-	TO_ONE, TO_MANY
-}
