@@ -1,35 +1,24 @@
 package com.nhl.link.etl.runtime.task.createorupdate;
 
-import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 
-import org.apache.cayenne.Cayenne;
 import org.apache.cayenne.DataObject;
 import org.apache.cayenne.ObjectContext;
-import org.apache.cayenne.exp.ExpressionFactory;
-import org.apache.cayenne.map.ObjEntity;
-import org.apache.cayenne.query.SelectQuery;
+import org.apache.cayenne.query.SelectById;
+import org.apache.cayenne.reflect.ArcProperty;
+import org.apache.cayenne.reflect.AttributeProperty;
+import org.apache.cayenne.reflect.ClassDescriptor;
+import org.apache.cayenne.reflect.PropertyDescriptor;
+import org.apache.cayenne.reflect.ToOneProperty;
 import org.apache.cayenne.util.Util;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.nhl.link.etl.EtlRuntimeException;
-import com.nhl.link.etl.metadata.RelationshipInfo;
-import com.nhl.link.etl.metadata.RelationshipType;
 
 public class CayenneCreateOrUpdateStrategy<T extends DataObject> implements CreateOrUpdateStrategy<T> {
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(CayenneCreateOrUpdateStrategy.class);
-
-	private final Map<String, RelationshipInfo> relationshipsByKeyAttributes;
-
-	public CayenneCreateOrUpdateStrategy(List<RelationshipInfo> relationships) {
-		relationshipsByKeyAttributes = new HashMap<>();
-		for (RelationshipInfo relationship : relationships) {
-			relationshipsByKeyAttributes.put(relationship.getKeyAttribute(), relationship);
-		}
-	}
 
 	@Override
 	public T create(ObjectContext context, Class<T> type, Map<String, Object> source) {
@@ -47,76 +36,70 @@ public class CayenneCreateOrUpdateStrategy<T extends DataObject> implements Crea
 
 		boolean updated = false;
 
+		// TODO: should we cache this lookup at a higher level?
+		ClassDescriptor descriptor = context.getEntityResolver().getClassDescriptor(
+				target.getObjectId().getEntityName());
+
 		for (Map.Entry<String, Object> e : source.entrySet()) {
-			updated = writeProperty(context, target, e.getKey(), e.getValue()) || updated;
+			updated = writeProperty(context, target, descriptor, e.getKey(), e.getValue()) || updated;
 		}
 
 		return updated;
 	}
 
-	protected boolean writeProperty(ObjectContext context, T target, String property, Object value) {
-		if (relationshipsByKeyAttributes.containsKey(property)) {
-			return writeRelationship(context, target, relationshipsByKeyAttributes.get(property), value);
-		} else {
-			return writeBasicProperty(context, target, property, value);
+	protected boolean writeProperty(ObjectContext context, T target, ClassDescriptor descriptor, String property,
+			Object value) {
+
+		PropertyDescriptor pd = descriptor.getDeclaredProperty(property);
+
+		if (pd instanceof AttributeProperty) {
+			return writeAttribute(context, target, (AttributeProperty) pd, value);
 		}
-	}
 
-	private boolean writeRelationship(ObjectContext context, T target, RelationshipInfo relationship, Object value) {
+		if (pd instanceof ArcProperty) {
 
-		boolean updated = false;
-		DataObject object;
-
-		if (value == null) {
-			object = null;
-		} else {
-			object = resolveRelationshipObject(context, relationship, value);
-			if (object == null) {
-				// TODO: should we throw an exception here or just ignore?
-				throw new EtlRuntimeException("Related object has not been found");
+			if (pd instanceof ToOneProperty) {
+				return writeRelationship(context, target, (ToOneProperty) pd, value);
+			} else {
+				throw new EtlRuntimeException("To-many relationships are not supported in ETL");
 			}
 		}
 
-		if (relationship.getType() == RelationshipType.TO_ONE) {
+		LOGGER.warn("No attribute or relationship '{}' for entity '{}'", property, descriptor.getEntity().getName());
+		return false;
+	}
+
+	private boolean writeRelationship(ObjectContext context, T target, ToOneProperty relationship, Object value) {
+
+		boolean updated = false;
+		DataObject object = resolveRelationshipObject(context, relationship, value);
+
+		// explicitly prevent phantom updates... this would allow us to track
+		// change status by looking inside ObjectContext.
+
+		if (!Util.nullSafeEquals(readProperty(target, relationship.getName()), object)) {
 			target.setToOneTarget(relationship.getName(), object, true);
 			updated = true;
-		} else if (relationship.getType() == RelationshipType.TO_MANY) {
-
-			if (object == null) {
-				// TODO: should we throw an exception here or just ignore?
-				throw new EtlRuntimeException("Can't set to-many relationship '" + relationship.getName()
-						+ "' to a null value");
-			}
-
-			target.addToManyTarget(relationship.getName(), object, true);
-			updated = true;
-		} else {
-			throw new EtlRuntimeException("Unknown relationship type");
 		}
-		
+
 		return updated;
 	}
 
-	private DataObject resolveRelationshipObject(ObjectContext context, RelationshipInfo relationship, Object value) {
-		if (relationship.getRelationshipKeyAttribute() == null) {
-			return Cayenne.objectForPK(context, relationship.getObjectType(), value);
-		}
-		return context.selectOne(new SelectQuery<>(relationship.getObjectType(), ExpressionFactory.matchExp(
-				relationship.getRelationshipKeyAttribute(), value)));
+	private DataObject resolveRelationshipObject(ObjectContext context, ToOneProperty relationship, Object value) {
+		return value != null ? (DataObject) SelectById
+				.query(relationship.getTargetDescriptor().getObjectClass(), value).selectOne(context) : null;
 	}
 
-	private boolean writeBasicProperty(ObjectContext context, T target, String property, Object value) {
-		// explicitly prevent phantom updates... this would allow us to track
-		// change stats by looking inside ObjectContext.
+	private boolean writeAttribute(ObjectContext context, T target, AttributeProperty attribute, Object value) {
+
 		boolean updated = false;
-		if (!Util.nullSafeEquals(readProperty(target, property), value)) {
-			ObjEntity targetObjEntity = context.getEntityResolver().getObjEntity(target.getClass());
-			if (targetObjEntity.getAttribute(property) != null) {
-				target.writeProperty(property, value);
-				updated = true;
-			} else {
-				LOGGER.warn("Unknown attribute '{}' for entity '{}'", property, target.getClass());
-			}
+
+		// explicitly prevent phantom updates... this would allow us to track
+		// change status by looking inside ObjectContext.
+
+		if (!Util.nullSafeEquals(readProperty(target, attribute.getName()), value)) {
+			target.writeProperty(attribute.getName(), value);
+			updated = true;
 		}
 
 		return updated;
