@@ -1,7 +1,8 @@
 Release 1.4
 
-#1 XML extractor support
+ #1 XML extractor support
 #36 CSV extractors
+#43 Deprecate/remove explicit relationship mapping from CreateOrUpdateBuilder
 
 Release 1.3 2015-04-09
 
